--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/googlemaps": "3.30.19",
     "@types/markerclustererplus": "2.1.33",
     "@types/react": "16.8.13",
+    "html-react-parser": "^0.14.1",
     "typescript": "3.4.3"
   },
   "scripts": {
