--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "bootstrap": "3.3.7",
     "chartist": "0.10.1",
     "node-sass": "4.12.0",
+    "prop-types": "^15.3.0",
     "react": "16.8.6",
     "react-bootstrap": "0.32.4",
     "react-chartist": "0.13.3",
