--- a/src/staticwebapp.config.json
+++ b/src/staticwebapp.config.json
@@ -1,7 +1,81 @@
 {
     "routes": [
         {
-            "route": "/admin/*"            
+            "route": "/profile",
+            "allowedRoles": ["authenticated"]
+        },
+        {
+            "route": "/admin/*"
+        },
+        {
+            "route": "/images/*",
+            "headers": {
+                "cache-control": "must-revalidate, max-age=15770000"
+            }
+        },
+        {
+            "route": "/api/*",
+            "methods": [ "GET" ],
+            "allowedRoles": ["registeredusers"]
+        },
+        {
+            "route": "/api/*",
+            "methods": [ "PUT", "POST", "PATCH", "DELETE" ],
+            "allowedRoles": ["administrator"]
+        },
+        {
+            "route": "/api/*",
+            "allowedRoles": ["authenticated"]
+        },
+        {
+            "route": "/customers/contoso",
+            "allowedRoles": ["administrator", "customers_contoso"]
+        },
+        {
+            "route": "/login",
+            "rewrite": "/.auth/login/github"
+        },
+        {
+            "route": "/.auth/login/twitter",
+            "statusCode": 404
+        },
+        {
+            "route": "/logout",
+            "redirect": "/.auth/logout"
+        },
+        {
+            "route": "/calendar/*",
+            "rewrite": "/calendar.html"
+        },
+        {
+            "route": "/specials",
+            "redirect": "/deals",
+            "statusCode": 301
         }
-    ]
+    ],
+    "navigationFallback": {
+      "rewrite": "index.html",
+      "exclude": ["/images/*.{png,jpg,gif}", "/css/*"]
+    },
+    "responseOverrides": {
+        "400" : {
+            "rewrite": "/invalid-invitation-error.html"
+        },
+        "401": {
+            "redirect": "/login",
+            "statusCode": 302
+        },
+        "403": {
+            "rewrite": "/custom-forbidden-page.html"
+        },
+        "404": {
+            "rewrite": "/404.html"
+        }
+    },
+    "globalHeaders": {
+        "content-security-policy": "default-src https: 'unsafe-eval' 'unsafe-inline'; object-src 'none'"
+    },
+    "mimeTypes": {
+        ".json": "text/json"
+    }
 }
